--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-body {
-    padding: 0px;
-}
-
 .top {
     background-color: #303030;
 }
@@ -13,19 +9,12 @@ body {
     font-size: 3rem;
 }
 
-.bg-light {
+.navbar {
+
     text-transform: uppercase;
     font-weight: bold;
-    --bs-light-rgb: transparent;
 }
-
-.navbar {}
 
 .nav-item {
     padding: 1rem;
-}
-
-.offcanvas-start {
-    width: 100% !important;
-    max-width: 100% !important;
 }
