--- a/css/styles.css
+++ b/css/styles.css
@@ -92,3 +92,31 @@ h1 {
     border-bottom: solid black 1px;
     padding-bottom: 8%;
 }
+
+.contact {
+    background-color:
+        #f5f5f5;
+}
+
+@media (min-width: 1200px) {
+    .contact .px-xl-20 {
+        padding-left: 20rem;
+        padding-right: 20rem;
+    }
+}
+
+.contact .button {
+    margin-top: 30px;
+    padding: 5px 50px;
+    border-radius: 0;
+    border: solid 2px;
+}
+
+
+
+
+
+.copyright {
+    color: #595959;
+    background-color: #1c1c1c;
+}
