--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,13 @@
     padding: 1rem;
 }
 
+.nav-link.active {
+    border-bottom: solid 5px #7b6c63;
+}
 
+.navbar-nav {
+    --bs-nav-link-hover-color: #fff !important;
+}
 
 .offcanvas {
     --bs-offcanvas-bg: #303030 !important;
@@ -32,13 +38,6 @@ main {
     text-transform: uppercase;
 }
 
-
-h1 {
-    font-weight: 600;
-    font-size: 16rem;
-    max-width: 540px;
-}
-
 .highlight {
     color: #7b6c63;
 }
@@ -46,6 +45,14 @@ h1 {
 .first {
     z-index: 1;
     position: relative;
+}
+
+@media (min-width: 992px) {
+    .first .fs-1 {
+        font-size: 4rem !important;
+        font-weight: 600;
+        max-width: 800px;
+    }
 }
 
 .first .button {
@@ -58,11 +65,20 @@ h1 {
 }
 
 .carousel-section {
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     position: relative;
     overflow: hidden;
+}
 
+.transparent-bg {
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    top: 0;
 }
 
 .carousel-container {
@@ -72,7 +88,6 @@ h1 {
     bottom: 0;
     z-index: -1;
     position: absolute;
-
 }
 
 .img-car {
