--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,18 @@ main {
     height: 10px;
 }
 
+.bar {
+    border: 3px solid #7b6c63;
+    width: 80px;
+    opacity: 1;
+
+}
+
+.services i {
+    font-size: 2rem;
+    margin-bottom: 8%;
+}
+
 .custom-style {
     text-decoration: none;
     background-color: transparent;
